nhl: prepared for video

--- a/ulrike/nhl/nhl.tex
+++ b/ulrike/nhl/nhl.tex
@@ -34,8 +34,7 @@
    \placeduck{36}
    \placeduck{108}
     % credit for background image
-    \node[white,text width=.7\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image source: \url{https://de.freepik.com/kostenloses-ki-bild/hockey-eisbahn-sportarena-leeres-feldstadion-erstellt-mit-generativer-ki_40007569.htm}};  
-    
+    \node[black,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image source: \url{https://de.freepik.com/kostenloses-ki-bild/hockey-eisbahn-sportarena-leeres-feldstadion-erstellt-mit-generativer-ki_40007569.htm}};
   \end{tikzpicture}
   \pause[400]
 \end{frame}	
