--- a/ulrike/birds/birds.tex
+++ b/ulrike/birds/birds.tex
@@ -44,6 +44,10 @@
 \path (7.5,12)--(6.5,5.5)node[pos=\fpeval{\the\value{page}/146},xscale=-1]{\includegraphics[width=1.5cm]{hummingbird}};
 \fi
 
+\ifnum \birdscene=2 
+\path (-2,3)--(3,2)node[pos=\fpeval{\the\value{page}/240}]{\includegraphics[width=1.55cm]{hummingbird}};
+\fi
+
 \inscene
 {\path (0.02,4.2)node{\includegraphics[width=1.5cm]{hummingbird}};}
 {\path (6.5,5.5)node[xscale=-1]{\includegraphics[width=1.5cm]{hummingbird}};}
@@ -102,7 +106,13 @@
  {\pspicture(0,0)\rput{-30}(0,0){\psBird}\endpspicture};}
 {\node[anchor=south west,xscale=-1,scale=0.4] at (5,2.5)
  {\pspicture(0,0)\rput{-30}(0,0){\psBird}\endpspicture};}
+ 
+\inscene{}{\path (4.5,1)node{\includegraphics[width=1.5cm]{ceredaduck}};}{}
 
+\inscene{}{\path (0,0.4)node{\includegraphics[width=1.5cm]{davidduck}};}{} 
+
+\inscene{}{}{\path%[thick,red,->] 
+(-2,15)--(2,8)node[pos=\fpeval{\the\value{page}/336}]{\includegraphics[width=1.5cm]{davidbird}};} 
 \end{tikzpicture}
 \end{frame}}
 
