--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -86,7 +86,7 @@
 \end{minipage}
 \vspace{0.15cm}\mbox
 
-\illustration[Happy New Year]{\textwidth,page=67}{../ulrike/finale/finale}
+\illustration[Hockey]{\textwidth,page=67}{../ulrike/nhl/nhl}
 \begin{monthCalendar}{2025}{01}
 \event{2026-01-08}{}{GUTenberg: Logiciel de gravure musicale Lilypond}
 \event{2026-01-10}{}{Birthday Donald Knuth}
@@ -105,7 +105,7 @@
 \end{monthCalendar}
 \timestamp{t=3m52s}
 
-\illustration[The Divine Comedy]{\textwidth,page=14}{../samcarter/dante/dante}
+\illustration[Stormy Weather]{\textwidth,page=14}{../carlatex/StormyWeather/StormyWeather}
 \begin{monthCalendar}{\nextyear}{03}
 \event{2026-03-01}{}{Saint David‘s Day}
 \event{2026-03-11}{2026-03-14}{Dante'26 (Lahnau, Germany)}
@@ -114,13 +114,13 @@
 \end{monthCalendar}
 \timestamp{t=4m22s}
 
-\illustration[Stormy Weather]{\textwidth,page=14}{../carlatex/StormyWeather/StormyWeather}
+\illustration[A Nature Lover]{\textwidth,page=46}{../paulo/flower-field/flower-field}
 \begin{monthCalendar}{\nextyear}{04}
 \event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
 \end{monthCalendar}
 \timestamp{t=3m25s}
 
-\illustration[Dinner]{\textwidth,page=14}{../samcarter/dinner/dinner}
+\illustration[The Divine Comedy]{\textwidth,page=14}{../samcarter/dante/dante}
 \begin{monthCalendar}{\nextyear}{05}
 \event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
 \event{2026-05-25}{}{Towel Day}
@@ -129,7 +129,7 @@
 \end{monthCalendar}
 \timestamp{t=4m42s}
 
-\illustration[A Nature Lover]{\textwidth,page=46}{../paulo/flower-field/flower-field}
+\illustration[Dinner]{\textwidth,page=14}{../samcarter/dinner/dinner}
 \begin{monthCalendar}{\nextyear}{06}
 \event{2026-06-01}{}{\LaTeX\ release}
 \event{2026-06-02}{}{Festa della Repubblica (Italy)}
@@ -140,7 +140,7 @@
 \timestamp{t=0m55s}
 
 % TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[Canada]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{07}
 \event{2026-07-01}{2026-07-03}{OSSConf 2026 (Žilina, Slovakia)}
 \event{2026-07-17}{2026-07-19}{TUG'26 (Alberta, Canada)}
@@ -157,15 +157,13 @@
 \end{monthCalendar}
 \timestamp{t=2m29s}
 
-\illustration[Lumberjack]{\textwidth,page=14}{../carlatex/Lumberjack/Lumberjack}
-%\illustration[En vacançes]{\textwidth,page=14}{../samcarter/Avignon/Avignon}
+\illustration[Birds]{\textwidth,page=336}{../ulrike/birds/birds}
 \begin{monthCalendar}{\nextyear}{09}
 \event{2026-09-19}{}{Talk Like a Pirate Day}
 \end{monthCalendar}
 \timestamp{t=0m26s}
 
-%\illustration[TikZlings Abbey]{\textwidth,page=250}{../samcarter/TikZlingsAbbey/TikZlingsAbbey}
-\illustration[All the world's a stage]{\textwidth,page=14}{../samcarter/globe/globe}
+\illustration[Lumberjack]{\textwidth,page=14}{../carlatex/Lumberjack/Lumberjack}
 \begin{monthCalendar}{\nextyear}{10}
 \event{2026-10-16}{}{Global Cat Day}
 \event{2026-10-25}{}{Saint Crispin's Day}
@@ -173,14 +171,14 @@
 \end{monthCalendar}
 \timestamp{t=0m10s}
 
-\illustration[Silent Beach]{\textwidth,page=14}{../ulrike/silentnight/silentnight}
+\illustration[All the world's a stage]{\textwidth,page=14}{../samcarter/globe/globe}
 \begin{monthCalendar}{\nextyear}{11}
 \event{2026-11-01}{}{\LaTeX\ release}
 \event{2026-11-07}{}{Hug a Bear Day}
 \end{monthCalendar}
 \timestamp{t=1m48s}
 
-\illustration[Happy Christmas]{\textwidth,page=14}{../carlatex/HappyChristmas/HappyChristmas}
+\illustration[Silent Beach]{\textwidth,page=14}{../ulrike/silentnight/silentnight}
 \begin{monthCalendar}{\nextyear}{12}
 \event{2026-12-08}{}{Pretend To Be A Time Traveler Day}
 %\event{2026-12-??}{}{TikZlings Extravaganza 2026 release}
