--- a/ulrike/finale/finale.tex
+++ b/ulrike/finale/finale.tex
@@ -3,7 +3,7 @@
 \usepackage{tikz}
 \usepackage{tikzlings}
 \usetikzlibrary{tikzlings,ducks}
-\usetikzlibrary{decorations.pathmorphing,decorations.shapes,decorations.markings}
+\usetikzlibrary{decorations.pathmorphing,decorations.shapes,decorations.markings,fpu}
 \setbeamertemplate{navigation symbols}{}
 \ExplSyntaxOn
 \setbeamertemplate{background~ canvas}{%
@@ -16,40 +16,18 @@ width=\paperwidth]{starsky-dark}%
 \ExplSyntaxOff
 
 \newcommand\tikzlingfirework[3]{%#1 tikzling, #2 x faktor, #3 y factor
-   \foreach \radius in {4,...,16}
+   \foreach \radius in {4,4.5,...,16.5}
      {%
         \begin{tikzpicture}[]
         \path[use as bounding box](0,0) rectangle (\textwidth,\textheight);
          % fireworks
          \pgfmathparse{100-(\radius-1)*10}%;
-         \begin{scope}[decoration={markings,mark=between positions 0 and 1 step 0.2 with{\path (0,0)pic[scale=\fpeval{0.1+0.05*\radius}]{#1};}}]
+         \begin{scope}[decoration={markings,mark=between positions 0 and 1 step 0.2 with{\path (0,0)pic[scale=\fpeval{0.1+0.05*\radius},/pgf/fpu/install only={reciprocal}]{#1};}}]
          \path[postaction=decorate] (0.#2\textwidth,0.#3\textheight) circle (\radius ex);
          \end{scope}
-        \end{tikzpicture}
-        \newpage
-        \begin{tikzpicture}[]
-        \path[use as bounding box](0,0) rectangle (\textwidth,\textheight);
-         % fireworks
-         \pgfmathparse{100-(\radius-1)*10}%;
-         \begin{scope}[decoration={markings,mark=between positions 0 and 1 step 0.2 with{\path (0,0)pic[scale=\fpeval{0.1+0.05*\radius}]{#1};}}]
-         \path[postaction=decorate] (0.#2\textwidth,0.#3\textheight) circle (\radius.5 ex);
-         \end{scope}
-        \end{tikzpicture}
+        \end{tikzpicture}%
         \newpage}}
 
-\newcommand\simpletikzlingfirework[3]{%#1 tikzling, #2 x faktor, #3 y factor
-   \foreach \radius in {4,...,16}
-     {%
-        \begin{tikzpicture}[]
-        \path[use as bounding box](0,0) rectangle (\textwidth,\textheight);
-         % fireworks
-         \pgfmathparse{100-(\radius-1)*10}%;
-         \begin{scope}[decoration={markings,mark=between positions 0 and 1 step 0.2 with{\path (0,0)pic[scale=\fpeval{0.1+0.05*\radius}]{#1};}}]
-         \path[postaction=decorate] (0.#2\textwidth,0.#3\textheight) circle (\radius ex);
-         \end{scope}
-        \end{tikzpicture}
-        \newpage
-     }}
 \begin{document}
 \mbox{}\newpage\mbox{}\newpage\mbox{}\newpage\mbox{}\newpage\mbox{}\newpage
 \mbox{}\newpage\mbox{}\newpage\mbox{}\newpage\mbox{}\newpage\mbox{}\newpage
@@ -61,13 +39,7 @@ width=\paperwidth]{starsky-dark}%
    %\sys_gset_rand_seed:n{42}
    \tl_set:Ne\l_tmpa_tl{\int_rand:nn{2}{8}}
    \tl_set:Ne\l_tmpb_tl{\int_rand:nn{2}{8}}
-   \tl_if_eq:nnTF{#1}{chicken}
-     {
-       \simpletikzlingfirework{chicken}{3}{4}
-     }
-     {
-       \tikzlingfirework{#1}{\l_tmpa_tl}{\l_tmpa_tl}
-     }
+   \tikzlingfirework{#1}{\l_tmpa_tl}{\l_tmpa_tl}
  }
 \ExplSyntaxOff
 
