--- a/samcarter/Avignon/Avignon.tex
+++ b/samcarter/Avignon/Avignon.tex
@@ -23,7 +23,7 @@
       \meerkat[scale=0.38,yshift=-4.7cm,xshift=12.5cm,rotate=-7.34*sin(\thepage*7)]
       \owl[scale=0.39,yshift=-4.6cm,xshift=15cm,rotate=-7.34*sin(\thepage*7)]
       \elephant[scale=0.4,yshift=-4.4cm,xshift=17.5cm,rotate=-7.34*sin(\thepage*7)]
-      \snowman[scale=0.41,yshift=-4.3cm,xshift=20cm,rotate=-7.34*sin(\thepage*7)]
+      \chicken[scale=0.41,yshift=-4.3cm,xshift=20cm,rotate=-7.34*sin(\thepage*7)]
       \ape[scale=0.42,yshift=-4.2cm,xshift=22.5cm,handposition=clap,rotate=-7.34*sin(\thepage*7),]
       \dog[scale=0.43,yshift=-4.1cm,xshift=25cm,rotate=-7.34*sin(\thepage*7),]
       \marmot[scale=0.44,yshift=-4.1cm,xshift=27.5cm,rotate=-7.34*sin(\thepage*7),]
