--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -116,6 +116,8 @@
 
 \illustration[A Nature Lover]{\textwidth,page=46}{../paulo/flower-field/flower-field}
 \begin{monthCalendar}{\nextyear}{04}
+\event{2026-04-07}{}{World Health Day}
+\event{2026-04-23}{}{World Book and Copyright Day}
 \event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
 \end{monthCalendar}
 \timestamp{t=3m25s}
@@ -123,6 +125,8 @@
 \illustration[The Divine Comedy]{\textwidth,page=14}{../samcarter/dante/dante}
 \begin{monthCalendar}{\nextyear}{05}
 \event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
+\event{2026-05-03}{}{World Press Freedom Day}
+\event{2026-05-04}{}{Star Wars Day}
 \event{2026-05-25}{}{Towel Day}
 \event{2026-05-27}{2026-05-30}{ATypI 2026 Stanford (Palo Alto, California, USA)}
 \event{2026-05-30}{}{Now26 (Paris, France)}
@@ -145,6 +149,8 @@
 \event{2026-07-01}{2026-07-03}{OSSConf 2026 (Žilina, Slovakia)}
 \event{2026-07-17}{2026-07-19}{TUG'26 (Alberta, Canada)}
 \event{2026-07-18}{}{Dies ater}
+\event{2026-07-20}{}{World Chess Day}
+\event{2026-07-30}{}{International Day of Friendship}
 \end{monthCalendar}
 \timestamp{t=2m53s}
 
@@ -159,7 +165,9 @@
 
 \illustration[Birds]{\textwidth,page=336}{../ulrike/birds/birds}
 \begin{monthCalendar}{\nextyear}{09}
+\event{2026-09-08}{}{International Literacy Day}
 \event{2026-09-19}{}{Talk Like a Pirate Day}
+\event{2026-09-30}{}{International Translation Day}
 \end{monthCalendar}
 \timestamp{t=0m26s}
 
@@ -181,6 +189,7 @@
 \illustration[Silent Beach]{\textwidth,page=14}{../ulrike/silentnight/silentnight}
 \begin{monthCalendar}{\nextyear}{12}
 \event{2026-12-08}{}{Pretend To Be A Time Traveler Day}
+\event{2026-12-10}{}{Human Rights Day}
 %\event{2026-12-??}{}{TikZlings Extravaganza 2026 release}
 \end{monthCalendar}
 \timestamp{t=5m47s}
