--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -99,6 +99,7 @@
 \event{2026-02-02}{}{Groundhog Day}
 \event{2026-02-07}{2026-02-10}{CODEX X (Oakland, California, USA)}
 \event{2026-02-07}{}{TeXLive'26 pretest start}
+\event{2026-02-12}{}{Gromit's Birthday}
 \event{2026-02-16}{}{Birthday Island of \TeX}
 \event{2026-02-21}{}{TeXLive'26 code freeze}
 \event{2026-02-28}{}{TeXLive'26 final updates from CTAN}
@@ -107,10 +108,11 @@
 
 \illustration[Stormy Weather]{\textwidth,page=14}{../carlatex/StormyWeather/StormyWeather}
 \begin{monthCalendar}{\nextyear}{03}
-\event{2026-03-01}{}{Saint David‘s Day}
+\event{2026-03-01}{}{Saint David's Day}
 \event{2026-03-11}{2026-03-14}{Dante'26 (Lahnau, Germany)}
 \event{2026-03-07}{}{TeXLive'26 release}
 \event{2026-03-20}{}{TUGboat 47:1 submission deadline}
+\event{2026-03-25}{}{Tolkien Reading Day}
 \end{monthCalendar}
 \timestamp{t=4m22s}
 
@@ -150,6 +152,7 @@
 \event{2026-07-17}{2026-07-19}{TUG'26 (Alberta, Canada)}
 \event{2026-07-18}{}{Dies ater}
 \event{2026-07-20}{}{World Chess Day}
+\event{2026-07-20}{}{Teddy Bear Picnic Day}
 \event{2026-07-30}{}{International Day of Friendship}
 \end{monthCalendar}
 \timestamp{t=2m53s}
@@ -160,12 +163,14 @@
 \event{2026-08-15}{}{Ferragosto}
 \event{2026-08-20}{}{International Hawaiian Pizza Day}
 \event{2026-08-24}{2026-08-29}{ConTEXt Meeting (Maibach, Germany)}
+\event{2026-08-25}{2026-08-28}{DocEng (Fribourg, Switzerland)}
 \end{monthCalendar}
 \timestamp{t=2m29s}
 
 \illustration[Birds]{\textwidth,page=336}{../ulrike/birds/birds}
 \begin{monthCalendar}{\nextyear}{09}
 \event{2026-09-08}{}{International Literacy Day}
+\event{2026-09-09}{}{Teddy Bear Day}
 \event{2026-09-19}{}{Talk Like a Pirate Day}
 \event{2026-09-30}{}{International Translation Day}
 \end{monthCalendar}
@@ -173,6 +178,7 @@
 
 \illustration[Lumberjack]{\textwidth,page=14}{../carlatex/Lumberjack/Lumberjack}
 \begin{monthCalendar}{\nextyear}{10}
+\event{2026-10-14}{}{National Bring Your Teddy Bear to Work Day}
 \event{2026-10-16}{}{Global Cat Day}
 \event{2026-10-25}{}{Saint Crispin's Day}
 \event{2026-10-28}{2026-10-31}{ATypI 2026 Sharjah (United Arab Emirates)}
