--- a/ulrike/finale/finale.tex
+++ b/ulrike/finale/finale.tex
@@ -3,7 +3,7 @@
 \usepackage{tikz}
 \usepackage{tikzlings}
 \usetikzlibrary{tikzlings,ducks}
-\usetikzlibrary{decorations.pathmorphing,decorations.shapes,decorations.markings,fpu}
+\usetikzlibrary{decorations.pathmorphing,decorations.shapes,decorations.markings}
 \setbeamertemplate{navigation symbols}{}
 \ExplSyntaxOn
 \setbeamertemplate{background~ canvas}{%
@@ -22,7 +22,7 @@ width=\paperwidth]{starsky-dark}%
         \path[use as bounding box](0,0) rectangle (\textwidth,\textheight);
          % fireworks
          \pgfmathparse{100-(\radius-1)*10}%;
-         \begin{scope}[decoration={markings,mark=between positions 0 and 1 step 0.2 with{\path (0,0)pic[scale=\fpeval{0.1+0.05*\radius},/pgf/fpu/install only={reciprocal}]{#1};}}]
+         \begin{scope}[decoration={markings,mark=between positions 0 and 1 step 0.2 with{\path (0,0)pic[scale=\fpeval{0.1+0.05*\radius}]{#1};}}]
          \path[postaction=decorate] (0.#2\textwidth,0.#3\textheight) circle (\radius ex);
          \end{scope}
         \end{tikzpicture}%
