--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -145,8 +145,7 @@
 \end{monthCalendar}
 \timestamp{t=0m55s}
 
-% TODO
-\illustration[Canada]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[Canada]{\textwidth,page=292}{../max/commercial/commercial}
 \begin{monthCalendar}{\nextyear}{07}
 \event{2026-07-01}{2026-07-03}{OSSConf 2026 (Žilina, Slovakia)}
 \event{2026-07-17}{2026-07-19}{TUG'26 (Alberta, Canada)}
