--- a/samcarter/globe/globe.tex
+++ b/samcarter/globe/globe.tex
@@ -22,16 +22,14 @@
       markings,
       % Thanks a lot to @marmot for this tikzmagick https://topanswers.xyz/tex?q=387
       mark=at position \insertoverlaynumber/450 with {
-        \path (-0.1cm,0) coordinate (aux0) (0.1cm,0) coordinate(aux1)
-   	(0,0) coordinate(aux2);
-   	\pgftransformreset
-   	\path let \p1=($(aux1)-(aux0)$), \n1={atan2(\y1,\x1)} in
-   	(aux2) node[rotate=\n1-90]{\includegraphics[width=0.6cm]{tardis.pdf}};
+        \path (-0.1cm,0) coordinate (aux0) (0.1cm,0) coordinate(aux1) (0,0) coordinate(aux2);
+        \pgftransformreset
+   	    \path let \p1=($(aux1)-(aux0)$), \n1={atan2(\y1,\x1)} in  	(aux2) node{\includegraphics[width=0.6cm]{tardis.pdf}};
       }
-    }
+    },
   ]
 
-    \path[xshift=-5cm,yshift=4cm,postaction=decorate] (9.6868, 0.7619).. controls (10.6306, 0.2913) and (10.5318, 0.1447) .. (11.7596, -1.0429).. controls (12.9334, -2.1783) and (14.9244, -0.9182) .. (16.3479, -0.77).. controls (17.7023, -0.6291) and (17.3324, -0.2652) .. (16.201, -0.2413).. controls (15.0637, -0.2172) and (14.411, -2.2785) .. (16.065, -1.5874).. controls (17.5682, -0.9592) and (18.7936, -1.2069) .. (20.4305, -1.7649).. controls (20.9644, -1.9469) and (21.5259, -2.1863) .. (22.1021, -2.1016);
+    \path[postaction=decorate,xshift=0.5cm] (4.6867, 4.7618).. controls (5.6305, 4.2913) and (5.5317, 4.1446) .. (6.7595, 2.9571).. controls (8.2313, 1.5334) and (12.751, 3.1505) .. (10.3925, 4.1896).. controls (8.6234, 4.8242) and (8.0578, 1.7667) .. (11.0649, 2.4126).. controls (12.568, 3.0408) and (13.7934, 2.7931) .. (15.4303, 2.2351).. controls (15.9642, 2.0531) and (16.5257, 1.8137) .. (17.1019, 1.8984);
 
     \node at (current page.center) {\includegraphics[width=\paperwidth]{Shakespeare's_Globe_(39593782581)}};
 
