birds: changed title

--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -166,7 +166,7 @@
 \end{monthCalendar}
 \timestamp{t=2m29s}
 
-\illustration[Birds]{\textwidth,page=336}{../ulrike/birds/birds}
+\illustration[Birds and Bears]{\textwidth,page=336}{../ulrike/birds/birds}
 \begin{monthCalendar}{\nextyear}{09}
 \event{2026-09-08}{}{International Literacy Day}
 \event{2026-09-09}{}{Teddy Bear Day}
