--- a/intermissions/extravaganza-credits.tex
+++ b/intermissions/extravaganza-credits.tex
@@ -26,7 +26,7 @@
 \SetCell[c=5]{} Graphics, Animations, Video and Sound &&&&\\
 SamCarter & Paulo Cereda  & Ulrike Fischer &  Carla Maggi & Max Chernoff\\
 \includegraphics[width=\linewidth]{samcarter-avatar} & \includegraphics[width=\linewidth]{cereda-avatar} & \includegraphics[width=\linewidth]{ulrike-avatar} & \includegraphics[width=\linewidth]{CarLaTeX_logo} & \includegraphics[width=\linewidth]{max-avatar}\\[0.3cm]
-{Storyboard\\Gert Fischer} & {Assistant\\Bär} & \SetCell[c=3]{} {Cast\\Loads of Tikzlings} &&\\[-0.4cm]
+{Storyboard\\Gert Fischer} & {Assistant\\Bär} & \SetCell[c=3]{} {Cast\\Loads of Tikzlings and Friends} &&\\[-0.4cm]
 \includegraphics[width=\linewidth,valign=T]{gert-avatar} & \includegraphics[width=\linewidth,valign=T]{baer} & \SetCell[c=3]{}
 \vspace*{-\baselineskip}%
 \begin{tcolorbox}[size=fbox,fit to height=2.4cm,frame empty,interior empty]
