--- a/max/commercial/commercial_repeat.tex
+++ b/max/commercial/commercial_repeat.tex
@@ -11,7 +11,10 @@
   width=\paperwidth,
   pagecommand={
     \begin{tikzpicture}[remember picture,overlay]
-      \node[white,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image source: \url{https://pixabay.com/de/photos/kanada-tag-calgary-alberta-kanada-5370627/}};
+      \node[white,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {
+        Image source: \url{https://pixabay.com/de/photos/kanada-tag-calgary-alberta-kanada-5370627/}
+%        \linebreak Music source: O Canada by Calixa Lavallée
+      };
     \end{tikzpicture}
   }
 ]{commercial}
