credits: fixed order of names

--- a/intermissions/extravaganza-credits.tex
+++ b/intermissions/extravaganza-credits.tex
@@ -30,7 +30,7 @@ SamCarter & Paulo Cereda  & Ulrike Fischer &  Carla Maggi & Max Chernoff\\
 \includegraphics[width=\linewidth,valign=T]{gert-avatar} & \includegraphics[width=\linewidth,valign=T]{baer} & \SetCell[c=3]{}
 \vspace*{-\baselineskip}%
 \begin{tcolorbox}[size=fbox,fit to height=2.4cm,frame empty,interior empty]
-Music, sound and lyrics by Paul Anka, Pierre Attaignant, Natio Herb Brown, Ludwig van Beethoven, Pierre Certon, Eurythmics, Arthur Freed, Franz Gruber, Joe Hickerson, Gene Kelly, Thomas Koschat, Calixa Lavallée, Annie Lenox, John Lunn, Henri Mancini, Chubby Parker, Monty Python, Wolfgang Amadeus Mozart, Myer Levin Advanced Steelband, Michael Palin, Ross Parker, Jacques Revaux, Miguel Rios, Amado Rodriguez, Pete Seeger, William Shakespeare, Frank Sinatra, David A. Stuart, Richard Wagner, Robert Stanley Weir and Spanac (via \url{www.freesoundslibrary.com}) % intermission jingle from https://www.freesoundslibrary.com/christmas-music-box-music/
+Music, sound and lyrics by Paul Anka, Pierre Attaignant, Natio Herb Brown, Ludwig van Beethoven, Pierre Certon, Eurythmics, Arthur Freed, Franz Gruber, Joe Hickerson, Gene Kelly, Thomas Koschat, Calixa Lavallée, Annie Lenox, John Lunn, Henri Mancini, Monty Python, Wolfgang Amadeus Mozart, Myer Levin Advanced Steelband, Michael Palin, Chubby Parker, Ross Parker, Jacques Revaux, Miguel Rios, Amado Rodriguez, Pete Seeger, William Shakespeare, Frank Sinatra, David A. Stuart, Richard Wagner, Robert Stanley Weir and Spanac (via \url{www.freesoundslibrary.com}) % intermission jingle from https://www.freesoundslibrary.com/christmas-music-box-music/
 \end{tcolorbox}\\
 \end{tblr}
 \end{frame}
